--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
 
  <!-- navigation code here -->
   <div class="navigation">
-    <h1>SpaceWalkers</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
-      <a href="#">Sign In</a>
-    </nav>
+    <div class="header">
+      <h1>SpaceWalkers</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+        <a href="#">Sign In</a>
+      </nav>
+    </div>
   </div>
 
   <div class="container home">
