--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="header">
         <h1>SpaceWalkers</h1>
         <nav>
-          <a href="#">Home</a> <a href="#">About Us</a> <a href="#">Blog</a>
-          <a href="#">Contact</a> <a href="#">Sign In</a>
+          <a href="#">Home</a> <a href="#">About Us</a> <a href="#">Contact</a>
+          <a href="#">Sign Up</a> <a href="#">Sign In</a>
         </nav>
       </div>
     </div>
